force-app/main/default/objects/Instructor__c/fields/Instructor_email__c.field-meta.xml
<CustomField>
    <fullName>Instructor_email__c</fullName>
    <label>Instructor_email</label>
    <type>Email</type>
</CustomField>