force-app/main/default/objects/Instructor__c/fields/Instructor_id__c.field-meta.xml
<CustomField>
    <fullName>Instructor_id__c</fullName>
    <displayFormat>I-{0000}</displayFormat>
    <label>Instructor_id</label>
    <type>AutoNumber</type>
</CustomField>