force-app/main/default/objects/Instructor__c/fields/Instructor_phone__c.field-meta.xml
<CustomField>
    <fullName>Instructor_phone__c</fullName>
    <label>Instructor_phone</label>
    <type>Phone</type>
</CustomField>