force-app/main/default/objects/Instructor__c/fields/Subjects__c.field-meta.xml
<CustomField>
    <fullName>Subjects__c</fullName>
    <label>Subjects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Math</fullName>
                <default>true</default>
                <label>Math</label>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Social Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>